# picr

./: CMakeLists.txt  LICENSE  README.md  build_executable.sh  build_library.sh  build_library_and_exe.sh  picr.sln  run_executable.sh
all/: CMakeLists.txt
executable_sources/: CMakeLists.txt
executable_sources/modules/cpp-terminal-gui/: CMakeLists.txt
executable_sources/source/: auto_file_saver.cpp  command_parser.cpp  editor.cpp  file_reader.cpp  file_writer.cpp  line.cpp  lock_file.cpp  main.cpp  terminal_renderer.cpp
include/lib/: lib.h
include/picr/: auto_file_saver.hpp  command_parser.hpp  editor.h  editor.hpp  file_reader.h  file_reader.hpp  file_writer.hpp  header.h  line.h  line.hpp  lock_file.hpp  terminal_renderer.h  terminal_renderer.hpp
lib_sources/: CMakeLists.txt
lib_sources/source/: lib.cpp
picr/: main.cpp  picr.vcxproj
